crates/ssa-cache-schema/tests/ui/fail_type_attr.stderr
error: unsupported cache_schema type attribute
 --> tests/ui/fail_type_attr.rs:4:16
  |
4 | #[cache_schema(skip)]
  |                ^^^^
