crates/ssa-cache-schema/tests/ui/fail_type_attr.rs
use ssa_cache_schema::CacheSchema;

#[derive(CacheSchema)]
#[cache_schema(skip)]
struct Bad {
    value: u32,
}

fn main() {}
